force-app/main/default/objects/Opportunity/fields/Facilitator_2__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Facilitator 2)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>