force-app/main/default/objects/Opportunity/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <inlineHelpText>Indicate if per person or per session (flat rate) or if any international deposits</inlineHelpText>
    <label>Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>