force-app/main/default/objects/Opportunity/fields/Final_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Status__c</fullName>
    <label>Final Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Final Invoice Sent</fullName>
            </value>
            <value>
                <fullName>Final Invoice Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>