force-app/main/default/objects/Opportunity/fields/Freight_Line__c.field-meta.xml
<CustomField>
    <fullName>Freight_Line__c</fullName>
    <label>Freight Line</label>
    <type>TextArea</type>
</CustomField>