force-app/main/default/objects/Opportunity/fields/Full_Partial__c.field-meta.xml
<CustomField>
    <fullName>Full_Partial__c</fullName>
    <label>Full/Partial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I am requesting a full scholarship for the program selected.</fullName>
            </value>
            <value>
                <fullName>I am requesting a full scholarship</fullName>
            </value>
            <value>
                <fullName>I am requesting a partial scholarship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>