force-app/main/default/objects/Opportunity/fields/GAN_Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>GAN_Commission_Paid__c</fullName>
    <label>GAN Commission Paid</label>
    <type>Date</type>
</CustomField>