force-app/main/default/objects/Opportunity/fields/GAN_Lead_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>GAN_Lead_Notification_Email__c</fullName>
    <label>GAN Lead Notification Email</label>
    <type>Email</type>
</CustomField>