force-app/main/default/objects/Opportunity/fields/GAN_Partner__c.field-meta.xml
<CustomField>
    <fullName>GAN_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the GAN partner that you are working with to close the opportunity</inlineHelpText>
    <label>GAN Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lead Opportunities Transferred</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>