force-app/main/default/objects/Opportunity/fields/Geographic_Market__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Market__c</fullName>
    <label>Geographic Market</label>
    <type>TextArea</type>
</CustomField>