force-app/main/default/objects/Opportunity/fields/Guidance_from_Prosci__c.field-meta.xml
<CustomField>
    <fullName>Guidance_from_Prosci__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guidance from Prosci</label>
    <type>Checkbox</type>
</CustomField>