force-app/main/default/objects/Opportunity/fields/Has_Deal_Support_Process__c.field-meta.xml
<CustomField>
    <fullName>Has_Deal_Support_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value that is enabled when a Deal Support Process that looks up to that parent Opportunity is generated.</description>
    <label>Has Deal Support Process</label>
    <type>Checkbox</type>
</CustomField>