force-app/main/default/objects/Opportunity/fields/Help_you_achieve_plans_goals__c.field-meta.xml
<CustomField>
    <fullName>Help_you_achieve_plans_goals__c</fullName>
    <inlineHelpText>PLEASE DESCRIBE HOW ATTENDING THIS TRAINING WILL HELP YOU TO ACHIEVE THE PLANS/GOALS YOU LISTED ABOVE</inlineHelpText>
    <label>Help you achieve plans/goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>