force-app/main/default/objects/Opportunity/fields/How_did_you_hear_about_Prosci__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_Prosci__c</fullName>
    <inlineHelpText>HOW DID YOU HEAR ABOUT PROSCI AND THE PROSCI CHANGE CERTIFICATION TRAINING PROGRAM</inlineHelpText>
    <label>How did you hear about Prosci</label>
    <type>TextArea</type>
</CustomField>