force-app/main/default/objects/Opportunity/fields/Important_Urgent__c.field-meta.xml
<CustomField>
    <fullName>Important_Urgent__c</fullName>
    <inlineHelpText>4 – we have paperwork out but there are no dates being held.  
4 - Also, past events where paperwork is still outstanding
3 – holding dates, 8+ weeks out.
2 – holding dates, between 5 and 8 weeks out.
1 – holding dates, 4 weeks out or less.</inlineHelpText>
    <label>Important/Urgent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <default>true</default>
                <label>4</label>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>