force-app/main/default/objects/Opportunity/fields/IncoTerms__c.field-meta.xml
<CustomField>
    <fullName>IncoTerms__c</fullName>
    <label>IncoTerms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>CIPDAT</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
            <value>
                <fullName>FAS</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>