force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry Market</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Arts, Entertainment &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Business Process Outsourcing</fullName>
            </value>
            <value>
                <fullName>Chemical Manufacturing</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Energy, Oil, &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Enterprise Software</fullName>
            </value>
            <value>
                <fullName>Fast Moving Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Finance/Banking</fullName>
            </value>
            <value>
                <fullName>Food/Beverage</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Hospitality &amp; Travel</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>IT Services</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Non-profit</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>Professional, Scientific Services</fullName>
            </value>
            <value>
                <fullName>Real Estate &amp; Rental &amp; Leasing</fullName>
            </value>
            <value>
                <fullName>Retail Trade</fullName>
            </value>
            <value>
                <fullName>Services - General</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Transportation &amp; Warehousing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>