force-app/main/default/objects/Opportunity/fields/Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact__c</fullName>
    <label>Initial Contact</label>
    <type>Date</type>
</CustomField>