force-app/main/default/objects/Opportunity/fields/Initial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fee__c</fullName>
    <label>Initial Fee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>