force-app/main/default/objects/Opportunity/fields/Initial_invoice_amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_invoice_amount__c</fullName>
    <label>Initial invoice amount</label>
    <length>25</length>
    <type>Text</type>
</CustomField>