force-app/main/default/objects/Opportunity/fields/Instructor_and_TM__c.field-meta.xml
<CustomField>
    <fullName>Instructor_and_TM__c</fullName>
    <formula>Assigned_Instructor__r.FirstName &amp; &quot; , &quot; &amp; Training_Manager_Requested__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inst &amp; TM</label>
    <type>Text</type>
</CustomField>