force-app/main/default/objects/Opportunity/fields/Integrate_CM_with_other_disciplines__c.field-meta.xml
<CustomField>
    <fullName>Integrate_CM_with_other_disciplines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrate CM with other disciplines</label>
    <type>Checkbox</type>
</CustomField>