force-app/main/default/objects/Opportunity/fields/Interested_in__c.field-meta.xml
<CustomField>
    <fullName>Interested_in__c</fullName>
    <label>Interested in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onsite Services</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>TTT</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>ECM Bootcamp</fullName>
            </value>
            <value>
                <fullName>Virtual Coaching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>