force-app/main/default/objects/Opportunity/fields/Interested_License_Type_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Interested_License_Type_From_Lead__c</fullName>
    <label>Interested License Type - From Lead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>