force-app/main/default/objects/Opportunity/fields/Interested_Program_Type_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Interested_Program_Type_From_Lead__c</fullName>
    <label>Interested Program Type - From Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practitioner Certification</fullName>
            </value>
            <value>
                <fullName>Change Management Sponsor Briefing</fullName>
            </value>
            <value>
                <fullName>Delivering Project Results Workshop</fullName>
            </value>
            <value>
                <fullName>Methodology Application Program (MAP)</fullName>
            </value>
            <value>
                <fullName>Train-the-Trainer</fullName>
            </value>
            <value>
                <fullName>Integrating Agile and Change Management</fullName>
            </value>
            <value>
                <fullName>Taking Charge of Change</fullName>
            </value>
            <value>
                <fullName>Leading Your Team Through Change</fullName>
            </value>
            <value>
                <fullName>ECM Boot Camp</fullName>
            </value>
            <value>
                <fullName>Other (please share in comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>