force-app/main/default/objects/Opportunity/fields/Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Invoice Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>