force-app/main/default/objects/Opportunity/fields/Invoice_payment_due_date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_payment_due_date__c</fullName>
    <label>Invoice payment due date</label>
    <type>Date</type>
</CustomField>