force-app/main/default/objects/Opportunity/fields/Is_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Is_Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>