force-app/main/default/objects/Opportunity/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>