force-app/main/default/objects/Opportunity/fields/Key_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the key decision maker with the company.</description>
    <label>Key Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Key Decision Maker)</relationshipLabel>
    <relationshipName>Opportunitiesf3kj</relationshipName>
    <type>Lookup</type>
</CustomField>