force-app/main/default/objects/Opportunity/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <inlineHelpText>Marketing Qualified Lead – come from marketing
Active Client – Sales Activty in the past 12 months
GAN - Comes from the GAN network
Smartlead - Identifed by a Training Manager</inlineHelpText>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acitve Client</fullName>
                <label>Active Client</label>
            </value>
            <value>
                <fullName>Advanced Certifications</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Bridge Option</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Client Services</fullName>
            </value>
            <value>
                <fullName>eLearning for Organizations</fullName>
            </value>
            <value>
                <fullName>Enterprise Training</fullName>
            </value>
            <value>
                <fullName>Existing: BDM Initiated</fullName>
            </value>
            <value>
                <fullName>Existing: Client Initiated</fullName>
            </value>
            <value>
                <fullName>GAN</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>New: BDM Initiated</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Proxima</fullName>
            </value>
            <value>
                <fullName>RFP/RFQ/RFT/RFI</fullName>
            </value>
            <value>
                <fullName>SmartLead</fullName>
            </value>
            <value>
                <fullName>Solutions for Organizations</fullName>
            </value>
            <value>
                <fullName>Speaking Engagements</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>