force-app/main/default/objects/Opportunity/fields/Leader_Email__c.field-meta.xml
<CustomField>
    <fullName>Leader_Email__c</fullName>
    <label>Leader Email</label>
    <type>Email</type>
</CustomField>