force-app/main/default/objects/Opportunity/fields/Leader_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Leader_First_Name__c</fullName>
    <inlineHelpText>Senior Leader endorsing the application</inlineHelpText>
    <label>Leader First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>