force-app/main/default/objects/Opportunity/fields/Leader_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Leader_Last_Name__c</fullName>
    <inlineHelpText>Senior Leadership endorsing application</inlineHelpText>
    <label>Leader Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>