force-app/main/default/objects/Opportunity/fields/License_box_Contact__c.field-meta.xml
<CustomField>
    <fullName>License_box_Contact__c</fullName>
    <label>License box - Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>