force-app/main/default/objects/Opportunity/fields/License_box_Contact_email__c.field-meta.xml
<CustomField>
    <fullName>License_box_Contact_email__c</fullName>
    <label>License box - Contact email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>