force-app/main/default/objects/Opportunity/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Change Management (ECM) License</fullName>
            </value>
            <value>
                <fullName>Organizational Change Competency License</fullName>
            </value>
            <value>
                <fullName>ADKAR Enablement License</fullName>
            </value>
            <value>
                <fullName>Enterprise Portal Subscription</fullName>
            </value>
            <value>
                <fullName>Individual All Access Portal Subscription</fullName>
            </value>
            <value>
                <fullName>Change Practitioner eToolkit License</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Managers</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>eLearning</fullName>
            </value>
            <value>
                <fullName>ADKAR Dashboard</fullName>
            </value>
            <value>
                <fullName>CMROI Calculator</fullName>
            </value>
            <value>
                <fullName>PCT Analyzer</fullName>
            </value>
            <value>
                <fullName>CMRL</fullName>
            </value>
            <value>
                <fullName>Maturity Model Audit</fullName>
            </value>
            <value>
                <fullName>Best Practices Audit</fullName>
            </value>
            <value>
                <fullName>Portal Bundle - CM Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>