force-app/main/default/objects/Opportunity/fields/Link_to_Contract_Legal_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Contract_Legal_Considerations__c</fullName>
    <label>Link to Contract/Legal Considerations</label>
    <length>60</length>
    <type>Text</type>
</CustomField>