force-app/main/default/objects/Opportunity/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <label>Location Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMAZON</fullName>
            </value>
            <value>
                <fullName>FULFILL</fullName>
            </value>
            <value>
                <fullName>ONSITE</fullName>
            </value>
            <value>
                <fullName>PUBLIC</fullName>
            </value>
            <value>
                <fullName>DROPSHIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>