force-app/main/default/objects/Opportunity/fields/Logistics_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logistics Approval Needed</label>
    <type>Checkbox</type>
</CustomField>