force-app/main/default/objects/Opportunity/fields/M_Motivation__c.field-meta.xml
<CustomField>
    <fullName>M_Motivation__c</fullName>
    <inlineHelpText>Can you help me understand the current situation? What&apos;s the driving force behind this? Why is this important for you? For the organization? What&apos;s the cost of not doing anything? Who stands to gain from this? Have there been past attempts to address?</inlineHelpText>
    <label>M-Motivation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>