force-app/main/default/objects/Opportunity/fields/Market_Priority__c.field-meta.xml
<CustomField>
    <fullName>Market_Priority__c</fullName>
    <label>Market Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>No interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>