force-app/main/default/objects/Opportunity/fields/Master_Instructor_Lead_Generator__c.field-meta.xml
<CustomField>
    <fullName>Master_Instructor_Lead_Generator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor Lead Generator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Master Instructor Lead Generator)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>