force-app/main/default/objects/Opportunity/fields/Needs_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Needs_Analysis__c</fullName>
    <label>Needs Analysis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>