force-app/main/default/objects/Opportunity/fields/Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Invoice_Date__c</fullName>
    <label>Next Invoice Date</label>
    <type>Date</type>
</CustomField>