force-app/main/default/objects/Opportunity/fields/of_contracted_rooms__c.field-meta.xml
<CustomField>
    <fullName>of_contracted_rooms__c</fullName>
    <label># of contracted rooms</label>
    <type>TextArea</type>
</CustomField>