force-app/main/default/objects/Opportunity/fields/of_gift_box_sets__c.field-meta.xml
<CustomField>
    <fullName>of_gift_box_sets__c</fullName>
    <inlineHelpText>Enter the number of people who are going to be on the kick off call</inlineHelpText>
    <label># of gift box sets</label>
    <length>3</length>
    <type>Text</type>
</CustomField>