force-app/main/default/objects/Opportunity/fields/of_participants__c.field-meta.xml
<CustomField>
    <fullName>of_participants__c</fullName>
    <label># of participants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>