force-app/main/default/objects/Opportunity/fields/of_SOW_s_for_Conga_Merge_Field__c.field-meta.xml
<CustomField>
    <fullName>of_SOW_s_for_Conga_Merge_Field__c</fullName>
    <formula>VALUE(Account.of_SOW_s_generated__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of SOW&apos;s for Conga Merge Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>