force-app/main/default/objects/Opportunity/fields/OFN_Name__c.field-meta.xml
<CustomField>
    <fullName>OFN_Name__c</fullName>
    <formula>SUBSTITUTE(Account.Name,&quot;&amp;&quot;,&quot;and&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OFN Name</label>
    <type>Text</type>
</CustomField>