force-app/main/default/objects/Opportunity/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Online Portal</fullName>
            </value>
            <value>
                <fullName>Online Bookstore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>