force-app/main/default/objects/Opportunity/fields/Order_Turn_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Turn_Time__c</fullName>
    <formula>Calculated_Create_Date__c  -  CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Turn Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>