force-app/main/default/objects/Opportunity/fields/Participant_Email__c.field-meta.xml
<CustomField>
    <fullName>Participant_Email__c</fullName>
    <label>Participant Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>