force-app/main/default/objects/Opportunity/fields/Partnership_Request__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Request__c</fullName>
    <inlineHelpText>Deal Review/ Finance Approval - Escalation - Discounts, financial invoicing assistance, etc.
Prosci Partnership Review - Prosci Partnership requests.</inlineHelpText>
    <label>Partnership Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal Review/ Finance Approval</fullName>
            </value>
            <value>
                <fullName>Prosci Partnership Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>