force-app/main/default/objects/Opportunity/fields/Payment_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Country_Code__c</fullName>
    <label>Payment Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code_2_Digit_ISO</valueSetName>
    </valueSet>
</CustomField>